fixing font and sections on mobile

--- a/src/components/Main/Section/ProjectCard/_ProjectCard.sass
+++ b/src/components/Main/Section/ProjectCard/_ProjectCard.sass
@@ -8,6 +8,8 @@
   border-radius: 4%
   transform-style: preserve-3d
   transition: all 0.5s ease
+  @media (max-width: 768px)   
+    // width: 100%
   &:hover
     transform: rotateY(180deg)
   &__side
