--- a/src/components/Main/Section/_Section.sass
+++ b/src/components/Main/Section/_Section.sass
@@ -16,3 +16,5 @@
   &__title
     width: 100%
     font-size: 80px
+    @media screen and (max-width: 360px)
+      font-size: 40px
